# agent-workflow-framework

./: .gitignore  README.md  pyproject.toml
agent_workflow_framework/: __init__.py  config.py
agent_workflow_framework/core/: __init__.py  node.py  state.py  workflow.py
agent_workflow_framework/core/graphs/: elements.py  networks.py
agent_workflow_framework/core/llm/: factory.py  models.py
agent_workflow_framework/core/llm/providers/: __init__.py  anthropic.py  google.py  lmstudio.py  openai.py
agent_workflow_framework/guardrails/: __init__.py  base.py  registry.py
agent_workflow_framework/llm/: __init__.py  base.py
agent_workflow_framework/tools/: __init__.py  base.py  registry.py
examples/: advanced_workflow.py  conditional_workflow.py  simple_workflow.py  utils.py
examples/hiking_check/: __init__.py  nodes.py  states.py  tools.py
examples/image_proc/: __init__.py  nodes.py  states.py
examples/youtube_summarize/: __init__.py  mcp_config.py  nodes.py  states.py
