[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_workflow_framework"
version = "0.1.0"
description = "A framework for agent-based workflow nodes with instruction, tools, and guardrails"
authors = [{name = "Takuya Kubo"}]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "langgraph>=0.0.30",
    "langchain>=0.0.267",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=2.1.2",
    "langchain-core>=0.0.27",
    "python-dotenv>=1.0.0",
    "Pillow==11.1.0",
    "httpx==0.28.1",
    "google-genai>=1.13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true